Fix warning "converting to non-pointer type 'bool' from NULL" in arraycopynode.cpp

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b55

        For the following code in arraycopynode.cpp which was introduced by JDK-6912521:

        bool ArrayCopyNode::finish_transform(...) {
        ...
            if (in(TypeFunc::Control) != ctl) {
        ...
              return NULL;
            }
        }

        older versions of GCC and maybe other compilers warn about:

        /arraycopynode.cpp:458: warning: converting to non-pointer type 'bool' from NULL

        The fix is trivial - just return false instead of NULL as this is already done in several other places in the same function.

              Assignee:
              Volker Simonis
              Reporter:
              Volker Simonis
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: