8073624: Fix waring "converting to non-pointer type 'bool' from NULL" in arraycopynode.cpp

Reviewed-by: roland